- refactor to live-paged-data-list - add room repository and populate initial data

--- a/app/src/main/res/layout/number_fact_fragment.xml
+++ b/app/src/main/res/layout/number_fact_fragment.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.NumberInfoFragment"
+    tools:context=".ui.main.NumberFactFragment"
     android:background="@color/mainBackground">
 
     <RelativeLayout
@@ -29,31 +27,19 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/title"
             android:layout_marginTop="20dp">
-            <androidx.cardview.widget.CardView
-                android:id="@+id/number_info_card"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/number_fact_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="150dp"
-                android:layout_margin="10dp"
-                card_view:cardElevation="4dp"
-                card_view:cardCornerRadius="8dp">
-                    <TextView
-                        android:id="@+id/number_info_text"
-                        android:layout_toEndOf="@+id/number_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="20dp"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp"
-                        android:textStyle="bold"/>
-            </androidx.cardview.widget.CardView>
+                android:orientation="horizontal">
+            </androidx.recyclerview.widget.RecyclerView>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_below="@+id/number_info_card">
+                android:layout_below="@+id/number_fact_rv">
                 <EditText
                     android:id="@+id/number_info_input"
                     android:layout_width="match_parent"
@@ -74,7 +60,5 @@
 
         <include layout="@layout/content_loader_view"/>
     </RelativeLayout>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
