--- a/app/src/main/res/layout/content_loader_view.xml
+++ b/app/src/main/res/layout/content_loader_view.xml
@@ -1,6 +1,8 @@
-<ProgressBar android:id="@+id/contentLoadingProgressBar"
+<ProgressBar
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/contentLoadingProgressBar"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     style="@android:style/Widget.Material.ProgressBar.Large"
     android:layout_centerInParent="true"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:visibility="gone" />
