--- a/app/src/main/res/layout/number_fact_fragment.xml
+++ b/app/src/main/res/layout/number_fact_fragment.xml
@@ -4,13 +4,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.NumberFactFragment"
+    tools:context=".ui.number.NumberFactFragment"
     android:background="@color/mainBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="40dp">
 
         <TextView
             android:id="@+id/title"
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/title"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="40dp">
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/number_fact_rv"
                 android:layout_width="match_parent"
@@ -39,7 +39,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_below="@+id/number_fact_rv">
+                android:gravity="bottom"
+                android:layout_gravity="bottom">
                 <EditText
                     android:id="@+id/number_info_input"
                     android:layout_width="match_parent"
