--- a/app/src/main/res/layout/number_fact_fragment.xml
+++ b/app/src/main/res/layout/number_fact_fragment.xml
@@ -1,65 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.number.NumberFactFragment"
+    tools:context="ru.nemodev.number.fact.ui.number.NumberFactFragment"
     android:background="@color/mainBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="40dp">
-
+        android:layout_height="match_parent">
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/pull_view_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:textColor="@android:color/black"
-            android:text="@string/app_title"
+            android:text="@string/pull_up_input_number"
             android:textSize="24sp"
             android:fontFamily="@font/montserrat_bold"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/title"
-            android:layout_marginTop="40dp">
+            android:layout_below="@+id/pull_view_title"
+            android:layout_marginTop="60dp">
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/number_fact_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
             </androidx.recyclerview.widget.RecyclerView>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:gravity="bottom"
-                android:layout_gravity="bottom">
-                <EditText
-                    android:id="@+id/number_info_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:maxLength="20"
-                    android:hint="@string/enter_number_hint" />
-                <Button
-                    android:id="@+id/next_number_info"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/number_info_input"
-                    android:textSize="16sp"
-                    android:text="@string/button_next_number_text"/>
-            </RelativeLayout>
-
         </RelativeLayout>
 
-        <include layout="@layout/content_loader_view"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom">
+            <EditText
+                android:id="@+id/number_info_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:maxLength="20"
+                android:hint="@string/enter_number_hint" />
+            <Button
+                android:id="@+id/next_number_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_below="@+id/number_info_input"
+                android:textSize="16sp"
+                android:text="@string/button_next_number_text"/>
+        </RelativeLayout>
+
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
