--- a/app/src/main/res/layout/number_fact_card_view.xml
+++ b/app/src/main/res/layout/number_fact_card_view.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView android:id="@+id/number_info_card"
+<com.google.android.material.card.MaterialCardView android:id="@+id/number_info_card"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="320dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="150dp"
-    android:maxHeight="400dp"
-    android:layout_marginStart="10dp"
     card_view:cardElevation="4dp"
-    card_view:cardCornerRadius="8dp">
+    card_view:cardCornerRadius="8dp"
+    android:layout_marginTop="@dimen/mtrl_card_spacing"
+    android:layout_marginStart="@dimen/mtrl_card_spacing"
+    android:layout_marginEnd="@dimen/mtrl_card_spacing">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -22,5 +23,5 @@
                     android:textSize="16sp"
                     android:textStyle="bold"/>
         </RelativeLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
 
