--- a/app/src/main/res/layout/random_fact_fragment.xml
+++ b/app/src/main/res/layout/random_fact_fragment.xml
@@ -1,52 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sothree.slidinguppanel.SlidingUpPanelLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="bottom"
-    tools:context="ru.nemodev.number.fact.ui.number.NumberFactFragment"
-    android:background="@color/mainBackground"
-    app:umanoPanelHeight="70dp"
-    app:umanoShadowHeight="5dp">
+<layout>
+    <data>
 
-    <RelativeLayout
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_marginStart="10dp"
-            android:textColor="@android:color/black"
-            android:text="@string/app_title"
-            android:textSize="24sp"
-            android:fontFamily="@font/montserrat_bold"/>
-
-        <RelativeLayout
-            android:id="@+id/content"
+        <com.sothree.slidinguppanel.SlidingUpPanelLayout
+            android:id="@+id/sliding_up_panel"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/title"
-            android:layout_marginTop="60dp">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rand_number_fact_rv"
+            android:gravity="bottom"
+            android:background="@color/mainBackground"
+            app:umanoPanelHeight="75dp"
+            app:umanoShadowHeight="5dp">
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-            </androidx.recyclerview.widget.RecyclerView>
-        </RelativeLayout>
+                android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:textColor="@android:color/black"
+                    android:text="@string/app_title"
+                    android:textSize="24sp"
+                    android:fontFamily="@font/montserrat_bold"/>
+                <RelativeLayout
+                    android:id="@+id/content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/title"
+                    android:layout_marginTop="10dp">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rand_number_fact_rv"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+                    </androidx.recyclerview.widget.RecyclerView>
+                </RelativeLayout>
+            </RelativeLayout>
 
-        <include layout="@layout/content_loader_view"/>
-    </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/pull_view_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:textColor="@android:color/black"
+                    android:text="@string/pull_up_input_number"
+                    android:textSize="24sp"
+                    android:fontFamily="@font/montserrat_bold"/>
+                <EditText
+                    android:id="@+id/number_info_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/pull_view_title"
+                    android:inputType="number"
+                    android:maxLength="20"
+                    android:hint="@string/enter_number_hint"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/number_info_input"
+                    android:layout_marginTop="10dp">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/number_fact_rv"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+                    </androidx.recyclerview.widget.RecyclerView>
+                </RelativeLayout>
+            </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <include layout="@layout/number_fact_fragment"/>
-    </RelativeLayout>
+        </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 
-</com.sothree.slidinguppanel.SlidingUpPanelLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
+
