--- a/app/src/main/res/layout/number_fact_card_view.xml
+++ b/app/src/main/res/layout/number_fact_card_view.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:binding="http://schemas.android.com/tools">
+<data>
+        <variable
+            name="numberFact"
+            type="ru.nemodev.number.fact.entity.NumberFact" />
+        <variable
+            name="onNumberCardActionListener"
+            type="ru.nemodev.number.fact.ui.number.adapter.OnNumberCardActionListener" />
+</data>
 
 <com.google.android.material.card.MaterialCardView android:id="@+id/number_info_card"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="150dp"
     card_view:cardElevation="4dp"
     card_view:cardCornerRadius="8dp"
     android:layout_marginTop="@dimen/mtrl_card_spacing"
@@ -13,15 +21,67 @@
     android:layout_marginEnd="@dimen/mtrl_card_spacing">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp">
-                <TextView
-                    android:id="@+id/number_info_text"
+            android:layout_height="match_parent"
+            android:layout_margin="20dp">
+                <RelativeLayout
+                    android:id="@+id/content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
+                    android:layout_alignParentTop="true">
+                        <TextView
+                            android:id="@+id/number_info_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@android:color/black"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            binding:formatFactText="@{numberFact}"/>
+                </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/footer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/content"
+                    android:layout_marginTop="30dp"
+                    android:layout_alignParentBottom="true">
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentStart="true">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="16sp"
+                                    android:textColor="@color/colorPrimary"
+                                    android:text="@{numberFact.factType.name()}"/>
+                        </RelativeLayout>
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentEnd="true">
+                                <ImageView
+                                    android:id="@+id/copyFact"
+                                    android:layout_width="30dp"
+                                    android:layout_height="30dp"
+                                    android:layout_centerVertical="true"
+                                    android:src="@android:drawable/ic_popup_reminder"
+                                    android:background="@null"
+                                    android:layout_marginEnd="16dp"
+                                    android:onClick="@{() -> onNumberCardActionListener.onCopyClick(numberFact)}"/>
+                                <ImageView
+                                    android:id="@+id/shareFact"
+                                    android:layout_width="30dp"
+                                    android:layout_height="30dp"
+                                    android:layout_centerVertical="true"
+                                    android:src="@android:drawable/ic_popup_reminder"
+                                    android:background="@null"
+                                    android:layout_toEndOf="@id/copyFact"
+                                    android:onClick="@{() -> onNumberCardActionListener.onShareClick(numberFact)}"/>
+                        </RelativeLayout>
+                </RelativeLayout>
         </RelativeLayout>
 </com.google.android.material.card.MaterialCardView>
+</layout>
 
