--- a/app/src/main/res/layout/number_fact_card_view.xml
+++ b/app/src/main/res/layout/number_fact_card_view.xml
@@ -52,8 +52,11 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:paddingLeft="5dp"
+                                    android:paddingRight="5dp"
                                     android:textSize="16sp"
-                                    android:textColor="@color/colorPrimary"
+                                    android:background="@drawable/fact_type_round_corners"
+                                    android:textColor="@android:color/white"
                                     android:text="@{numberFact.factType.name()}"/>
                         </RelativeLayout>
                         <RelativeLayout
