--- a/app/src/main/res/layout/number_fact_card_view.xml
+++ b/app/src/main/res/layout/number_fact_card_view.xml
@@ -16,9 +16,9 @@
     android:layout_height="wrap_content"
     card_view:cardElevation="4dp"
     card_view:cardCornerRadius="8dp"
-    android:layout_marginTop="@dimen/mtrl_card_spacing"
-    android:layout_marginStart="@dimen/mtrl_card_spacing"
-    android:layout_marginEnd="@dimen/mtrl_card_spacing">
+    android:layout_marginTop="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
