--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -13,17 +13,17 @@
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto">
 
-            <com.google.android.gms.ads.AdView
-                xmlns:ads="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/adView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentTop="true"
-                android:visibility="gone"
-                ads:adSize="SMART_BANNER"
-                ads:adUnitId="@string/ads_simple_banner_id_test">
-            </com.google.android.gms.ads.AdView>
+<!--            <com.google.android.gms.ads.AdView-->
+<!--                xmlns:ads="http://schemas.android.com/apk/res-auto"-->
+<!--                android:id="@+id/adView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_centerHorizontal="true"-->
+<!--                android:layout_alignParentTop="true"-->
+<!--                android:visibility="gone"-->
+<!--                ads:adSize="SMART_BANNER"-->
+<!--                ads:adUnitId="@string/ads_simple_banner_id_test">-->
+<!--            </com.google.android.gms.ads.AdView>-->
 
             <fragment
                 android:id="@+id/nav_host_fragment"
@@ -34,8 +34,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:navGraph="@navigation/navigation_graph"
-                android:layout_below="@+id/adView"/>
+                app:navGraph="@navigation/navigation_graph"/>
         </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
