--- a/app/src/main/res/layout/number_fact_card_view.xml
+++ b/app/src/main/res/layout/number_fact_card_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:binding="http://schemas.android.com/tools">
 <data>
+        <import type="ru.nemodev.number.fact.utils.NumberFactUtils"
+                alias="NumberFactUtils"/>
         <variable
             name="numberFact"
             type="ru.nemodev.number.fact.entity.NumberFact" />
@@ -16,9 +18,9 @@
     android:layout_height="wrap_content"
     card_view:cardElevation="4dp"
     card_view:cardCornerRadius="8dp"
-    android:layout_marginTop="16dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp">
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -57,7 +59,7 @@
                                     android:textSize="14sp"
                                     android:background="@drawable/fact_type_round_corners"
                                     android:textColor="@android:color/white"
-                                    android:text="@{numberFact.factType.name()}"/>
+                                    android:text="@{NumberFactUtils.getVerboseType(numberFact)}"/>
                         </RelativeLayout>
                         <RelativeLayout
                             android:layout_width="wrap_content"
