--- a/app/src/main/res/layout/number_fact_fragment.xml
+++ b/app/src/main/res/layout/number_fact_fragment.xml
@@ -23,8 +23,9 @@
                     android:id="@+id/title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="@dimen/title_margin"
+                    android:layout_marginStart="@dimen/title_margin"
+                    android:layout_marginEnd="@dimen/title_margin"
                     android:textColor="@android:color/black"
                     android:text="@string/app_title"
                     android:textSize="24sp"
@@ -60,9 +61,10 @@
                     android:id="@+id/pull_view_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="@dimen/pull_view_title_margin"
+                    android:layout_marginBottom="@dimen/pull_view_title_margin"
+                    android:layout_marginStart="@dimen/pull_view_title_margin"
+                    android:layout_marginEnd="@dimen/pull_view_title_margin"
                     android:layout_below="@+id/pull_view_header_line"
                     android:textColor="@android:color/black"
                     android:text="@string/pull_up_input_number"
