--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="card_action_size">24dp</dimen>
     <dimen name="fact_text_size">16sp</dimen>
+    <dimen name="title_margin">10dp</dimen>
+    <dimen name="pull_view_title_margin">10dp</dimen>
 </resources>
