- добавил покупку рекламы

--- a/app/src/main/res/layout/number_fact_card_view.xml
+++ b/app/src/main/res/layout/number_fact_card_view.xml
@@ -5,7 +5,7 @@
                 alias="NumberFactUtils"/>
         <variable
             name="numberFact"
-            type="ru.nemodev.number.fact.entity.NumberFact" />
+            type="ru.nemodev.number.fact.entity.number.NumberFact" />
         <variable
             name="onNumberCardActionListener"
             type="ru.nemodev.number.fact.ui.number.adapter.OnNumberCardActionListener" />
